Hospital Management System/force-app/main/default/objects/Appointment__c/fields/Appointment_Status__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Status__c</fullName>
    <description>Current lifecycle status of the appointment.</description>
    <label>Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
                <default>true</default>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>