Hospital Management System/force-app/main/default/objects/Appointment__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <description>Category of appointment for clinical or operational classification.</description>
    <label>Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>General Checkup</fullName>
                <default>true</default>
                <label>General Checkup</label>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>