Hospital Management System/force-app/main/default/objects/Appointment__c/fields/Reason_for_Visit__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Visit__c</fullName>
    <description>Detailed reason or symptoms provided by the patient for the visit.</description>
    <label>Reason for Visit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>